--- a/index.html
+++ b/index.html
@@ -603,11 +603,14 @@
             <div class="container grid">
                 <span class="decor-slash"></span>
                 <div class="ft-abt">
-                    <div class="ft-abt-ava">
+                    <div class="ft-abt-ava hidden-tb">
                         <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
                     </div>
                     <div class="ft-abt-main">
                         <div class="ft-abt-info">
+                            <div class="ft-abt-ava hidden-dk">
+                                <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
+                            </div>
                             <h5 class="txt txt-20 txt-med ft-abt-info-name">
                                 Syed Miftah Zeya
                             </h5>
@@ -617,13 +620,18 @@
                             <p class="heading h5 ft-abt-info-quote">
                                 We are prepared and committed to discovering tailored solutions for your needs.
                             </p>
-                            <div class="ft-abt-info-btn-wrap">
+                            <div class="ft-abt-info-btn-wrap hidden-tb">
                                 <a href="#" class="btn btn-outline">
                                     <div class="txt txt-16 txt-med">Get in touch</div>
                                 </a>
                             </div>
                         </div>
                         <div class="ft-abt-form-wrap">
+                            <div class="ft-abt-info-btn-wrap hidden-dk">
+                                <a href="#" class="btn btn-outline">
+                                    <div class="txt txt-16 txt-med">Get in touch</div>
+                                </a>
+                            </div>
                             <div class="txt txt-20 txt-med ft-abt-form-title">
                                 Or join our newsletter.
                             </div>
@@ -637,6 +645,11 @@
                                 <div class="ft-abt-form-btn-wrap">
                                     <button type="submit" class="btn btn-outline">
                                         <div class="txt txt-16 txt-med txt-btn">Subscribe</div>
+                                        <div class="icon icon-24 btn-submit-ic">
+                                            <svg width="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M4.5 12H19.5M19.5 12L12.75 5.25M19.5 12L12.75 18.75" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                            </svg>
+                                        </div>
                                     </button>
                                 </div>
                             </form>
@@ -738,6 +751,19 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="ft-bottom">
+                    <div class="txt txt-16 ft-copy-txt">© <span data-year="">2024</span>, SPACE-SHIP. All Rights Reserved.</div>
+                    <div class="ft-term">
+                        <div class="ft-term-item">
+                            <a href="#" class="txt txt-16 ft-term-item-link">Imprints</a>
+                            <div class="txt txt-16 ft-term-item-div">/</div>
+                        </div>
+                        <div class="ft-term-item">
+                            <a href="#" class="txt txt-16 ft-term-item-link">Privacy policy</a>
+                            <div class="txt txt-16 ft-term-item-div">/</div>
+                        </div>
                     </div>
                 </div>
             </div>
