--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
                 </div>
             </div>
         </header>
-
+        <div class="cursor">
+            <div class="cursor-wrap">
+                <div class="cursor-inner"></div>
+            </div>
+        </div>
         <div class="main" data-barba="container" data-barba-namespace="home" data-namespace="home">
             <section class="home-hero">
                 <div class="container grid">
