--- a/imprint.html
+++ b/imprint.html
@@ -32,7 +32,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="about">About
+                                <a href="./about.html" class="txt txt-16 txt-med header-link-txt" data-link="about">About
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -270,7 +270,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="about">
+                                <a href="./about.html" class="heading h5 ft-menu-link-txt" data-link="about">
                                     About
                                     <div class="line">
                                         <div class="line-inner"></div>
