--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="about">About
+                                <a href="./about.html" class="txt txt-16 txt-med header-link-txt" data-link="about">About
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -221,7 +221,7 @@
                         SPACE-SHIP's vision stems from our deep shipping industry expertise, revealing untapped tech opportunities. We envision the maritime future driven by real-time data and AI adoption.
                     </h3>
                     <div class="home-abt-btn-wrap">
-                        <a href="#" class="btn btn-outline">
+                        <a href="./about.html" class="btn btn-outline">
                             <div class="txt txt-16 txt-med">
                                 Learn more about us
                             </div>
@@ -230,136 +230,134 @@
                 </div>
             </section>
             <section class="home-part">
-                <div class="container grid">
-                    <div class="home-part-label-wrap">
-                        <span class="line"></span>
-                        <p class="txt txt-med txt-16 home-part-label">
-                            Partners & Grants
-                        </p>
-                        <span class="line"></span>
-                    </div>
-                    <div class="home-part-marquee">
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                <div class="home-part-label-wrap">
+                    <span class="line"></span>
+                    <p class="txt txt-med txt-16 home-part-label">
+                        Partners & Grants
+                    </p>
+                    <span class="line"></span>
+                </div>
+                <div class="home-part-marquee">
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
                         </div>
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
                         </div>
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
                         </div>
                     </div>
-                    <div class="home-part-marquee hidden-dk">
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
                         </div>
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
                         </div>
-                        <div class="home-part-marquee-inner">
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-2.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-3.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-4.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-5.png" alt="Partner">
-                            </div>
-                            <div class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-6.png" alt="Partner">
-                            </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                        </div>
+                    </div>
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                        </div>
+                    </div>
+                </div>
+                <div class="home-part-marquee hidden-dk">
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                        </div>
+                    </div>
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
+                        </div>
+                    </div>
+                    <div class="home-part-marquee-inner">
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-2.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-3.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-4.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-5.png" alt="Partner">
+                        </div>
+                        <div class="home-part-marquee-item">
+                            <img src="./imgs/partner/logo-part-6.png" alt="Partner">
                         </div>
                     </div>
                 </div>
@@ -825,7 +823,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="about">
+                                <a href="/about.html" class="heading h5 ft-menu-link-txt" data-link="about">
                                     About
                                     <div class="line">
                                         <div class="line-inner"></div>
