--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="solutions">Solutions
+                                <a href="./solution.html" class="txt txt-16 txt-med header-link-txt" data-link="solution">Solution
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -48,7 +48,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="insights">Insights
+                                <a href="./insight.html" class="txt txt-16 txt-med header-link-txt" data-link="insight">Insights
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -938,7 +938,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="solution">
+                                <a href="./solution.html" class="heading h5 ft-menu-link-txt" data-link="solution">
                                     Solution
                                     <div class="line">
                                         <div class="line-inner"></div>
@@ -946,7 +946,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="insights">
+                                <a href="./insight.html" class="heading h5 ft-menu-link-txt" data-link="insight">
                                     Insights
                                     <div class="line">
                                         <div class="line-inner"></div>
