--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="careers">Careers
+                                <a href="./about.html#Careers" class="txt txt-16 txt-med header-link-txt" data-link="careers">Careers
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -690,7 +690,7 @@
                     </div>
                 </div>
             </section>
-            <section class="abt-job">
+            <section class="abt-job" id="Careers">
                 <div class="container grid">
                     <div class="label-wrap abt-job-label">
                         <div class="txt txt-16 txt-med">Open positions</div>
@@ -954,7 +954,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="./blog-dtl.html" class="heading h5 ft-menu-link-txt" data-link="career">
+                                <a href="./about.html#Careers" class="heading h5 ft-menu-link-txt" data-link="career">
                                     Career
                                     <div class="line">
                                         <div class="line-inner"></div>
