--- a/blog-dtl.html
+++ b/blog-dtl.html
@@ -56,7 +56,7 @@
                                 <span class="txt txt-16 header-link-div">/</span>
                             </li>
                             <li class="header-link-item">
-                                <a href="./" class="txt txt-16 txt-med header-link-txt" data-link="careers">Careers
+                                <a href="./about.html#Careers" class="txt txt-16 txt-med header-link-txt" data-link="careers">Careers
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
@@ -383,7 +383,7 @@
                                 </a>
                             </li>
                             <li class="ft-menu-link">
-                                <a href="#" class="heading h5 ft-menu-link-txt" data-link="career">
+                                <a href="./about.html#Careers" class="heading h5 ft-menu-link-txt" data-link="career">
                                     Career
                                     <div class="line">
                                         <div class="line-inner"></div>
