--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="popup-form">
                         <form action="#" class="popup-form-inner">
-                            <div class="popup-form-fields">
+                            <div class="popup-form-fields" data-lenis-prevent>
                                 <div class="popup-input-grp">
                                     <label for="fname" class="txt txt-14 txt-med popup-input-label">
                                         First name
