--- a/about.html
+++ b/about.html
@@ -98,6 +98,109 @@
                 </div>
             </div>
         </div>
+        <div class="popup">
+            <div class="popup-overlay" data-popup="close"></div>
+            <div class="popup-main">
+                <div class="popup-inner">
+                    <div class="popup-info">
+                        <h3 class="heading h2 popup-info-title">
+                            Get in touch
+                        </h3>
+                        <div class="popup-info-inner hidden-mb">
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Support
+                                </div>
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                    info@space-ship.world
+                                </a>
+                            </div>
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Call us
+                                </div>
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                    +49 151 66113142
+                                </a>
+                            </div>
+                            <div class="line line-vert"></div>
+                        </div>
+                    </div>
+                    <div class="popup-form">
+                        <form action="#" class="popup-form-inner">
+                            <div class="popup-form-fields" data-lenis-prevent>
+                                <div class="popup-input-grp">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                        First name
+                                    </label>
+                                    <input type="text" name="fname" class="txt txt-16 popup-input-field" placeholder="Ex: John" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="lname" class="txt txt-14 txt-med popup-input-label">
+                                        Last name
+                                    </label>
+                                    <input type="text" name="lname" class="txt txt-16 popup-input-field" placeholder="Ex: Doe" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="mail" class="txt txt-14 txt-med popup-input-label">
+                                        Email
+                                    </label>
+                                    <input type="email" name="mail" class="txt txt-16 popup-input-field" placeholder="Ex: johndoe@example.com" required="required">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                        Company <span class="txt-opt">(Optional)</span>
+                                    </label>
+                                    <input type="text" name="fname" class="txt txt-16 popup-input-field" placeholder="Ex: Google">
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                                <div class="popup-input-grp textarea-grp">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                        Message <span class="txt-opt">(Optional)</span>
+                                    </label>
+                                    <textarea type="text" name="fname" class="txt txt-16 popup-input-field" placeholder=""></textarea>
+                                    <div class="line"><div class="line-inner"></div></div>
+                                </div>
+                            </div>
+                            <div class="popup-form-btn-wrap">
+                                <button type="submit" class="btn popup-form-submit">
+                                    <div class="txt txt-16 txt-btn txt-med">Send</div>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="popup-info-inner hidden-dk">
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Support
+                                </div>
+                                <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link">
+                                    info@space-ship.world
+                                </a>
+                            </div>
+                            <div class="popup-info-item">
+                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                    Call us
+                                </div>
+                                <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link">
+                                    +49 151 66113142
+                                </a>
+                            </div>
+                    </div>
+                </div>
+                <a href="#" class="btn-ic popup-close" data-popup="close">
+                    <div class="icon icon-16">
+                        <svg width="100%" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13 3L3 13" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3 3L13 13" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </a>
+            </div>
+        </div>
         <div class="main" data-barba="container" data-barba-namespace="about" data-namespace="about">
             <section class="abt-hero">
                 <div class="container grid">
