--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="popup">
-            <div class="popup-overlay"></div>
+            <div class="popup-overlay" data-popup="close"></div>
             <div class="popup-main">
                 <div class="popup-inner">
                     <div class="popup-info">
